# UserManagementSystem

./: CMakeLists.txt  README.MD  main.cpp
include/: auth.h  user.h
src/: auth.cpp  user.cpp
static/js/: login.js  register.js
templates/: login.html  register.html
tests/: test.cpp
